# quadratic_residues

./: .cursorignore  .gitignore  Cargo.toml  README.md  bacon.toml
src/: examples.rs  lib.rs  main.rs  split_vector.rs  utilities.rs
src/tests/: get_residues_tests.rs  mod.rs  mod_absolute_test.rs  scratch.rs  test_get_residues.rs  test_mod_absolute.rs  test_quadratic_residues.rs
