[package]
name = "quadratic_residues"
version = "0.1.0"
authors = ["Benjamin Hampikian <dev@gssp.io>"]
edition = "2021"
rust-version = "1.79.0"
description = "A library for calculating quadratic residues of integers"
readme = "README.md"
repository = "https://github.com/gsspdev/quadratic_residues"
license = "MIT"
keywords = ["number theory", "mathematics", "algebra"]
categories = ["mathematics"]

[dependencies]
