[package]
name = "quadratic_residues"
version = "0.1.2"
authors = ["Benjamin Hampikian <dev@gssp.io>"]
edition = "2021"
rust-version = "1.79.0"
description = "A library for calculating quadratic residues of integers"
readme = "README.md"
repository = "https://github.com/gsspdev/quadratic_residues"
license = "MIT"
keywords = ["algebra", "number-theory", "mathematics", "modular-arithmetic", "quadratic-residue"]
categories = ["mathematics"]

[dependencies]
